--- a/SCM_Water_frontDesk/src/main/resources/templates/login.html
+++ b/SCM_Water_frontDesk/src/main/resources/templates/login.html
@@ -33,7 +33,7 @@
                 <div class="aui-center">
                     <span class="aui-center-title">登录</span>
                 </div>
-                <a href="javascript:;" class="aui-navBar-item">
+                <a href="gggg" class="aui-navBar-item">
                     <i class="icon icon-sys"></i>注册
                 </a>
             </header>
