--- a/SCM_Water_frontDesk/src/main/resources/templates/login.html
+++ b/SCM_Water_frontDesk/src/main/resources/templates/login.html
@@ -6,8 +6,8 @@
         <meta content="yes" name="apple-mobile-web-app-capable"/>
         <meta content="black" name="apple-mobile-web-app-status-bar-style"/>
         <meta content="telephone=no" name="format-detection"/>
-        <link href="static/denglu/css/style.css" rel="stylesheet" type="text/css"/>
-        <script type="text/javascript" src="static/denglu/js/jquery.min.js"></script>
+        <link href="denglu/css/style.css" rel="stylesheet" type="text/css"/>
+        <script type="text/javascript" src="denglu/js/jquery.min.js"></script>
 
     </head>
     <body>
@@ -66,13 +66,13 @@
                 </div>
                 <div class="aui-login-armor">
                     <a href="javascript:;" class="aui-tabBar-item">
-                        <img src="static/denglu/images/icon-sin-001.png" alt="">
+                        <img src="denglu/images/icon-sin-001.png" alt="">
                     </a>
                     <a href="javascript:;" class="aui-tabBar-item">
-                        <img src="static/denglu/images/icon-sin-002.png" alt="">
+                        <img src="denglu/images/icon-sin-002.png" alt="">
                     </a>
                     <a href="javascript:;" class="aui-tabBar-item">
-                        <img src="static/denglu/images/icon-sin-003.png" alt="">
+                        <img src="denglu/images/icon-sin-003.png" alt="">
                     </a>
                 </div>
             </section>
