--- a/SCM_Water_frontDesk/src/main/resources/templates/login.html
+++ b/SCM_Water_frontDesk/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
         <meta content="black" name="apple-mobile-web-app-status-bar-style"/>
         <meta content="telephone=no" name="format-detection"/>
         <link href="denglu/css/style.css" rel="stylesheet" type="text/css"/>
-        <script type="text/javascript" src="denglu/js/jquery.min.js"></script>
+        <script type="text/javascript" src="../static/denglu/js/jquery.min.js"></script>
 
     </head>
     <body>
@@ -77,6 +77,7 @@
                 </div>
             </section>
         </section>
+        
         <script type="text/javascript">
             $('.aui-show').click(function() {
                 let pass_type = $('input.password').attr('type');
