--- a/SCM_Water_Back/src/main/resources/templates/creates.html
+++ b/SCM_Water_Back/src/main/resources/templates/creates.html
@@ -9,7 +9,7 @@
     <div class="layui-row">
         <div class="layui-col-lg12">
             <fieldset class="layui-elem-field">
-                <legend>仓库管理 - 详细信息</legend>
+                <legend>仓库管理 - 修改</legend>
                 <div class="layui-field-box">
                         <div class="layui-form-item">
                             <label class="layui-form-label">商品序号</label>
@@ -54,6 +54,12 @@
                         </div> -->
                         <div class="layui-form-item">
                             <div class="layui-input-block">
+                            </div>
+                        </div>
+                         <div class="layui-form-item">
+                            <div class="layui-input-block">
+                            <button th:dw-url="'repertoryUpdate?repertoryid='+${repertoryDetails.commodityid}" class="layui-btn">修改</button>
+                            <button type="reset" class="layui-btn layui-btn-primary">重置</button>
                             </div>
                         </div>
                 </div>
