--- a/SCM_Water_Back/src/main/resources/templates/repertory.html
+++ b/SCM_Water_Back/src/main/resources/templates/repertory.html
@@ -91,7 +91,7 @@
                 <div class="layui-form-item" style="text-align:center;">
                   <div class="layui-inline">
                     <div class="layui-input-inline">
-                      <input autocomplete="off" class="layui-input" placeholder="请输入名称" type="text" name="name" value="">
+                      <input autocomplete="off" class="layui-input" placeholder="请输入名称" type="text" name="name" value="#{commodityname}">
                     </div>
                   </div>
                   <div class="layui-inline" style="text-align:left;">
