--- a/SCM_Water_Back/src/main/resources/templates/repertory.html
+++ b/SCM_Water_Back/src/main/resources/templates/repertory.html
@@ -59,19 +59,22 @@
             </dl>
         </li>
         <li class="layui-nav-item layui-nav-itemed">
-                <a href="javascript:;">会员管理</a>
+                <a href="javascript:;">仓库管理</a>
                 <dl class="layui-nav-child">
-                    <dd><a class="layui-this" href="member.html">会员列表</a></dd>
+                    <dd><a class="layui-this" href="repertoryParticulars">仓库详情</a></dd>
+                    <dd><a class="layui-this" href="repertoryParticulars">仓库进货</a></dd>
                 </dl>
             </li>
         <li class="layui-nav-item">
-            <a href="javascript:;">开发者工具</a>
-            <dl class="layui-nav-child">
-                <dd><a href="control.html">一键生成</a></dd>
-            </dl>
+            <a href="javascript:;">统计信息</a>
+           <!--  <dl class="layui-nav-child">
+                <dd><a href="control.html">现金统计</a></dd>
+                <dd><a href="control.html">商品统计</a></dd>
+                <dd><a href="control.html">退单原因统计</a></dd>
+            </dl> -->
         </li>
         <li class="layui-nav-item">
-            <a href="javascript:;">集成Demo</a>
+            <a href="javascript:;">系统管理</a>
             <dl class="layui-nav-child">
                 <dd><a href="upload.html">文件上传</a></dd>
                 <dd><a href="upload.html">Execel导出</a></dd>
@@ -91,12 +94,12 @@
                 <div class="layui-form-item" style="text-align:center;">
                   <div class="layui-inline">
                     <div class="layui-input-inline">
-                      <input autocomplete="off" class="layui-input" placeholder="请输入名称" type="text" name="name" value="#{commodityname}">
+                      <input autocomplete="off" class="layui-input" placeholder="请输入名称" type="text" name="commodityName" value="">
                     </div>
                   </div>
                   <div class="layui-inline" style="text-align:left;">
                     <div class="layui-input-inline">
-                      <button class="layui-btn"><i class="layui-icon">&#xe615;</i>查询</button>
+                       <button class="layui-btn" onclick="chaxun()"><i class="layui-icon">&#xe615;查询</i></button> 
                     </div>
                   </div>
                 </div>
@@ -159,7 +162,6 @@
         </fieldset>
     </div>
   </div>
-  
   <div class="layui-footer">
     <!-- 底部固定区域 -->
   </div>
@@ -168,5 +170,21 @@
 <script type="text/javascript" src="./layui/layui.js"></script>
 <script type="text/javascript" src="./icheck/icheck.js"></script>
 <script type="text/javascript" src="./javascript/dw.js"></script>
+<script type="text/javascript">
+function chaxun() {
+	 var commodityname=$("input[name=commodityname]").val();
+	 window.location.href="repertoryParticulars?commodityName="+commodityname; 
+/* 	$.ajax({
+		url : "/repertoryParticulars?commodityName="+commodityname,
+		type : "POST",
+		dataType : "json",
+		contentType : "application/json;charset=UTF-8",
+	});  */
+}
+	/* */
+
+
+
+</script>
 </body>
 </html>
