--- a/SCM_Water_frontDesk/src/main/resources/templates/lm/wallet.html
+++ b/SCM_Water_frontDesk/src/main/resources/templates/lm/wallet.html
@@ -1,13 +1,11 @@
-﻿<html lang="en" xmlns:th="http://www.thymeleaf.org">
-
+﻿<!doctype html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <title>便捷桶装水商城</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
-<script src="js/vendor/modernizr-2.8.3.min.js"></script>
 <link rel="stylesheet" href="lm/css/bootstrap.min.css">
 <link rel="stylesheet" href="lm/css/font-awesome.min.css">
 <link rel="stylesheet" href="lm/css/pe-icon-7-stroke.css">
@@ -16,7 +14,6 @@
 <link rel="stylesheet" href="lm/css/responsive.css">
 <script src="lm/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
-
 <body>
 	<div class="wrapper">
 		<header class="header-section section sticker">
@@ -27,81 +24,57 @@
 				<div class="row">
 					<div class="col-xs-12">
 						<div class="page-banner-content">
-							<h1>商品详情</h1>
+							<h1>我的钱包</h1>
 							<ul class="breadcrumb">
-								<li><a href="#">主页面</a></li>
-								<li class="active">商品详情</li>
+								<li><a href="home">主页面</a></li>
+								<li class="active">我的钱包</li>
 							</ul>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-
 		<div class="page-section section pt-120 pb-120">
 			<div class="container">
+			
 				<div class="row mb-40">
 					<div class="col-md-5 col-sm-6 col-xs-12 mb-40">
 						<div class="tab-content mb-10">
-							<div class="pro-large-img tab-pane active" id="pro-large-img-1">
-								<img th:src="'lm/img/shui/'+${commodity.img}"/>
+							<div  class="pro-large-img tab-pane active" id="pro-large-img-1">
+								<img  th:src="${userWallet.portrait}"  style="width: 200px;height:200px "/>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-7 col-sm-6 col-xs-12 mb-40">
 						<div class="product-details section">
-							<!-- Title -->
-							<h1 class="title" th:text="${commodity.state}"></h1>
+							<h3 style="font-weight: bold;" th:text="${userWallet.name}"></h3>
+							<br>
 							<div class="price-ratting section">
-								<h5 class="pd-sub-title">单价</h5>
-								<span class="price float-left unit">￥ <span th:text="${#numbers.formatDecimal(commodity.commoditysale, 0, 2)}"  class="new">
-										</span></span>
-								<span class="ratting float-right"> <i
-									class="fa fa-star active"></i> <i class="fa fa-star active"></i>
-									<i class="fa fa-star active"></i> <i class="fa fa-star active"></i>
-									<i class="fa fa-star active"></i>
-								</span>
-							</div>
-							<div class="product-size section">
-								<h5 class="pd-sub-title">总金额</h5>
-								<span class="price float-left">￥<span class="new tatol">
+								<h5 class="pd-sub-title">钱包余额(元)</h5>
+								<span class="price float-left">￥<span class="new" th:text="${#numbers.formatDecimal(userWallet.money, 0, 2)}">
 										</span></span>
 							</div>
-							<h5 class="pd-sub-title">数量</h5>
 							<div class="quantity-cart section">
-								<div class="product-quantity">
-									<input type="text" value="1" onblur="tatol()">
-								</div>
+							<h4 style="font-weight: bold;"><span style="font-size:13px">现在充值</span><span style="text-decoration: underline;">9折</span></h4>
 								<div>
-									<a href="checkout.html"><button class="add-to-cart">购买</button></a>
-									<button class="add-to-cart">添加到购物车</button>
+									<button class="add-to-cart">去充值</button>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-			
-		<div class="footerpage"></div>
+			<div class="footerpage"></div>
 		</div>
-</div>
+	</div>
 	<script src="lm/js/vendor/jquery-3.1.1.min.js"></script>
 	<script src="lm/js/bootstrap.min.js"></script>
 	<script src="lm/js/plugins.js"></script>
 	<script src="lm/js/ajax-mail.js"></script>
 	<script src="lm/js/main.js"></script>
-		<script type="text/javascript">
-		$(".headerpage").load("header.html");
-		$(".footerpage").load("footer.html");
-		function tatol(){
-			var count=$(".product-quantity input").val();
-			var price=$(".unit span").text();
-			var total=count*price+".00";
-			$(".tatol").html(total);
-		}
-		$(function() {
-			tatol();
-		});
+	<script type="text/javascript">
+		$(".headerpage").load("lm/header.html");
+		$(".footerpage").load("lm/footer.html");
 	</script>
 </body>
 
