--- a/SCM_Water_frontDesk/src/main/resources/templates/lm/myorder.html
+++ b/SCM_Water_frontDesk/src/main/resources/templates/lm/myorder.html
@@ -94,8 +94,8 @@
 	<script src="lm/js/ajax-mail.js"></script>
 	<script src="lm/js/main.js"></script>
 	<script type="text/javascript">
-		$(".headerpage").load("header.html");
-		$(".footerpage").load("footer.html");
+		$(".headerpage").load("lm/header.html");
+		$(".footerpage").load("lm/footer.html");
 	</script>
 </body>
 
