--- a/SCM_Water_frontDesk/src/main/resources/templates/lm/cart.html
+++ b/SCM_Water_frontDesk/src/main/resources/templates/lm/cart.html
@@ -43,44 +43,45 @@
 		<div class="page-section section pt-120 pb-80">
 			<div class="container">
 				<div class="row">
-					<form action="#">
-						<div class="col-xs-12">
-							<div class="cart-table table-responsive mb-40">
-								<table>
-									<thead>
-										<tr>
-											<th class="pro-thumbnail">图片</th>
-											<th class="pro-title">产品</th>
-											<th class="pro-price">单价</th>
-											<th class="pro-quantity">数量</th>
-											<th class="pro-subtotal">总价</th>
-											<th class="pro-remove">删除</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr th:each="shopping,iterStat:${shoppingList}">
-											<td class="pro-thumbnail"><a href="#"><img
-													th:src="'lm/img/shui/'+${shopping.img}" /></a></td>
-											<td class="pro-title" th:text="${shopping.commodityName}"></td>
-											<td class="pro-price">￥<span class="amount"
-												th:text="${#numbers.formatDecimal(shopping.commoditySale, 0, 2)}"></span></td>
-											<td class="pro-quantity"><div class="product-quantity">
-													<input type="text" th:value="${shopping.count}" />
-												</div></td>
-											<td class="pro-subtotal">￥<span class="pro-total"
-												th:text="${#numbers.formatDecimal(shopping.money, 0, 2)}"></span></td>
-											<td class="pro-remove"><a>×</a></td>
-										</tr>
 
-									</tbody>
-								</table>
-							</div>
+					<div class="col-xs-12">
+						<div class="cart-table table-responsive mb-40">
+							<table>
+								<thead>
+									<tr>
+										<th class="pro-thumbnail">图片</th>
+										<th class="pro-title">产品</th>
+										<th class="pro-price">单价</th>
+										<th class="pro-quantity">数量</th>
+										<th class="pro-subtotal">总价</th>
+										<th class="pro-remove">删除</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr th:each="shopping,iterStat:${shoppingList}">
+										<td class="pro-thumbnail"><a href="#"><img
+												th:src="'lm/img/shui/'+${shopping.img}" /></a></td>
+										<td class="pro-title" th:text="${shopping.state}"></td>
+										<td class="pro-price">￥<span class="amount"
+											th:text="${#numbers.formatDecimal(shopping.commoditySale, 0, 2)}"></span></td>
+										<td class="pro-quantity"><div class="product-quantity">
+												<input type="text" th:value="${shopping.count}" />
+											</div></td>
+										<td class="pro-subtotal">￥<span class="pro-total"
+											th:text="${#numbers.formatDecimal(shopping.money, 0, 2)}"></span></td>
+										<td class="pro-remove"><a>×</a></td>
+									</tr>
+
+								</tbody>
+							</table>
 						</div>
-						<div class="col-md-8 col-sm-7 col-xs-12">
-							<div class="cart-buttons mb-30">
-								<a href="home">继续购物</a>
-							</div>
+					</div>
+					<div class="col-md-8 col-sm-7 col-xs-12">
+						<div class="cart-buttons mb-30">
+							<a href="home">继续购物</a>
 						</div>
+					</div>
+					<form action="settleAccount" method="post" id="subform">
 						<div class="col-md-4 col-sm-5 col-xs-12">
 							<div class="cart-total mb-40">
 								<h3>总计</h3>
@@ -92,10 +93,15 @@
 											<td style="font-weight: bold;"><span>￥</span><span
 												class="totals"></span></td>
 										</tr>
+										
 									</tbody>
+									
 								</table>
+
 								<div class="proceed-to-checkout section mt-30">
-									<a href="checkout.html">去结算</a>
+									<!-- <button class="add-to-cart" type="submit">购买</button> -->
+									<a onclick="submitt()">去结算</a>
+									<input type="hidden" name="total">
 								</div>
 							</div>
 						</div>
@@ -115,10 +121,10 @@
 	<script src="lm/js/ajax-mail.js"></script>
 	<script src="lm/js/main.js"></script>
 	<script type="text/javascript">
-	$(function() {
-		showtotal();
-		selCart();
-	})
+		$(function() {
+			showtotal();
+			selCart();
+		})
 		$(".headerpage").load("lm/header.html");
 		$(".footerpage").load("lm/footer.html");
 		$('.product-quantity')
@@ -152,33 +158,39 @@
 					//数量修改后重新计算总金额
 					showtotal();
 				});
-		
+
 		//计算总金额
 		function showtotal() {
 			var totals = 0;
 			var totaldocument = document.getElementsByClassName("pro-total");
 			for (var i = 0; i < totaldocument.length; i++) {
-				totals += parseFloat(totaldocument[i].innerText); 
+				totals += parseFloat(totaldocument[i].innerText);
 			}
-			
+
 			if (totals % 1 == 0) {
 				totals = totals + ".00";
 			} else {
 				totals = Math.round(totals * 100) / 100;
 			}
 			$(".order-total").find(".totals").html(totals);
+			$("input[name=total]").val(totals);
 		}
-		$(".pro-remove").on('click',function() {
+		$(".pro-remove").on('click', function() {
 			alert(1);
-			
+
 		})
-		
-	/* 	function delcart() {
-			alert(1);
-			confirm("确定删除么?"){
-				alert("删除");
-			}
-		} */
+
+		function submitt() {
+			var form = document.getElementById('subform');
+			form.submit();
+		}
+
+		/* 	function delcart() {
+				alert(1);
+				confirm("确定删除么?"){
+					alert("删除");
+				}
+			} */
 		/* function  selCart() {
 			$.ajax({
 				url : "selCart",
@@ -196,7 +208,6 @@
 				}
 			});
 		} */
-		
 	</script>
 </body>
 
