--- a/SCM_Water_frontDesk/src/main/resources/templates/lm/product-details.html
+++ b/SCM_Water_frontDesk/src/main/resources/templates/lm/product-details.html
@@ -7,7 +7,7 @@
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
-<script src="js/vendor/modernizr-2.8.3.min.js"></script>
+<script src="lm/js/vendor/modernizr-2.8.3.min.js"></script>
 <link rel="stylesheet" href="lm/css/bootstrap.min.css">
 <link rel="stylesheet" href="lm/css/font-awesome.min.css">
 <link rel="stylesheet" href="lm/css/pe-icon-7-stroke.css">
@@ -22,6 +22,7 @@
 		<header class="header-section section sticker">
 			<div class="headerpage"></div>
 		</header>
+		
 		<div class="page-banner-section section">
 			<div class="container">
 				<div class="row">
@@ -29,7 +30,7 @@
 						<div class="page-banner-content">
 							<h1>商品详情</h1>
 							<ul class="breadcrumb">
-								<li><a href="#">主页面</a></li>
+								<li><a href="home">主页面</a></li>
 								<li class="active">商品详情</li>
 							</ul>
 						</div>
@@ -37,8 +38,8 @@
 				</div>
 			</div>
 		</div>
-
 		<div class="page-section section pt-120 pb-120">
+		<form action="settleAccount" method="post">
 			<div class="container">
 				<div class="row mb-40">
 					<div class="col-md-5 col-sm-6 col-xs-12 mb-40">
@@ -52,6 +53,8 @@
 						<div class="product-details section">
 							<!-- Title -->
 							<h1 class="title" th:text="${commodity.state}"></h1>
+							<input type="hidden" name="commodityid" th:value="${commodity.commodityid}"/>
+							<input type="hidden" name="way" value="1"/>
 							<div class="price-ratting section">
 								<h5 class="pd-sub-title">单价</h5>
 								<span class="price float-left unit">￥ <span th:text="${#numbers.formatDecimal(commodity.commoditysale, 0, 2)}"  class="new">
@@ -64,16 +67,17 @@
 							</div>
 							<div class="product-size section">
 								<h5 class="pd-sub-title">总金额</h5>
-								<span class="price float-left">￥<span class="new tatol">
+								<span class="price float-left">￥<span  class="new tatol">
 										</span></span>
+									<input type="hidden" name="total"/>
 							</div>
 							<h5 class="pd-sub-title">数量</h5>
 							<div class="quantity-cart section">
 								<div class="product-quantity">
-									<input type="text" value="1" onblur="tatol()">
+									<input type="text" name="count" value="1" onblur="tatol()">
 								</div>
 								<div>
-									<a href="checkout.html"><button class="add-to-cart">购买</button></a>
+									<button class="add-to-cart" type="submit">购买</button>
 									<button class="add-to-cart">添加到购物车</button>
 								</div>
 							</div>
@@ -81,7 +85,7 @@
 					</div>
 				</div>
 			</div>
-			
+			</form>
 		<div class="footerpage"></div>
 		</div>
 </div>
@@ -91,17 +95,36 @@
 	<script src="lm/js/ajax-mail.js"></script>
 	<script src="lm/js/main.js"></script>
 		<script type="text/javascript">
-		$(".headerpage").load("header.html");
-		$(".footerpage").load("footer.html");
+		$(".headerpage").load("lm/header.html");
+		$(".footerpage").load("lm/footer.html");
 		function tatol(){
 			var count=$(".product-quantity input").val();
 			var price=$(".unit span").text();
 			var total=count*price+".00";
 			$(".tatol").html(total);
+			$("input[name=total]").val(total);
 		}
 		$(function() {
 			tatol();
 		});
+		
+		function  buy() {
+			/* var commodityid=$("input[name=commodityid]").val();
+			var count=$("input[name=count]").val();
+			var total=$("input[name=total]").val(); */
+			/* $.ajax({
+				url : "buy?commodityid="+commodityid+"&count="+count+"&total="+total,
+				type : "POST", 
+			 	data : {"commodityid":commodityid,"count":count,"total":total}, 
+				 dataType : "json",
+				contentType : "application/json;charset=UTF-8", 
+				 success : function(data) {
+				},
+				error : function() {
+					alert("失败");
+				} 
+			 });  */
+		} 
 	</script>
 </body>
 
